--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,16 +10,19 @@ android {
     signingConfigs {
 
     }
-    compileSdkVersion 30
+    compileSdkVersion 32
     buildToolsVersion '30.0.3'
     defaultConfig {
         applicationId 'com.willdev.openvpn'
         minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 3
-        versionName "1.2"
+        targetSdkVersion 32
+        versionCode 5
+        versionName "5.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+    }
+    packagingOptions {
+        pickFirst '**/*.so'
     }
     buildTypes {
 
@@ -37,8 +40,8 @@ dependencies {
 
     implementation project(path: ':imagepickerr')
     implementation project(path: ':SmoothCheckBox-masterr')
-    implementation project(path: ':vpnLib')
     implementation project(path: ':Wheell')
+    implementation(files("libs/unity-ads.aar"))
 
     implementation 'androidx.annotation:annotation:1.2.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -47,17 +50,16 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
 
-    implementation 'com.google.android.gms:play-services-ads:20.3.0'
-    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.google.android.gms:play-services-ads:21.1.0'
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'
     implementation 'com.google.android.gms:play-services-gcm:17.0.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.android.material:material:1.6.1'
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.google.firebase:firebase-core:18.0.0'
-    implementation 'com.google.firebase:firebase-messaging:21.0.0'
+    implementation 'com.google.firebase:firebase-core:21.1.0'
+    implementation 'com.google.firebase:firebase-messaging:23.0.7'
     implementation 'com.google.android.ads.consent:consent-library:1.0.8'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation(files("libs/unity-ads.aar"))
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation 'com.jakewharton:butterknife:10.1.0'
@@ -97,7 +99,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test:runner:1.3.1-alpha02'
 
-    implementation 'com.android.billingclient:billing:3.0.3'
+    implementation 'com.android.billingclient:billing:4.0.0'
     implementation 'com.google.ads.mediation:facebook:6.6.0.0'
     implementation 'com.google.android.ads:mediation-test-suite:2.0.0'
 
@@ -105,6 +107,8 @@ dependencies {
     implementation 'com.applovin:applovin-sdk:+'
     implementation 'com.appodeal.ads.sdk:core:2.11.0'
     implementation 'com.appodeal.ads.sdk.networks:bidmachine:2.11.0.20'
+    implementation 'androidx.work:work-runtime:2.7.1'
+    implementation 'com.github.oneconnectapi:OneConnectLib:v1.0.8'
 }
 
 apply plugin: 'com.google.gms.google-services'
