--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
         <activity android:name="com.willdev.openvpn.fromanother.activity.SplashScreen"/>
         <activity android:name="com.willdev.openvpn.view.Servers">
         </activity>
-        <activity android:name="com.willdev.openvpn.fromanother.activity.WelcomeActivity">
+        <activity android:name="com.willdev.openvpn.fromanother.activity.WelcomeActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -47,15 +48,15 @@
             </intent-filter>
         </activity>
     <activity
-        android:name="de.blinkt.openvpn.DisconnectVPNActivity"
+        android:name="top.oneconnectapi.app.DisconnectVPNActivity"
         android:excludeFromRecents="true"
         android:noHistory="true"
         android:taskAffinity=".DisconnectVPN"
         android:theme="@style/blinkt.dialog" />
-        MobileAds
     <service
-        android:name="de.blinkt.openvpn.core.OpenVPNService"
-        android:permission="android.permission.BIND_VPN_SERVICE">
+        android:name="top.oneconnectapi.app.core.OpenVPNService"
+        android:permission="android.permission.BIND_VPN_SERVICE"
+        android:exported="true">
         <intent-filter>
             <action android:name="android.net.VpnService" />
         </intent-filter>
