--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Mar 27 13:39:08 IST 2022
-sdk.dir=C\:\\Users\\amand\\AppData\\Local\\Android\\Sdk
-ndk.dir=C\:\\Users\\amand\\AppData\\Local\\Android\\Sdk\\ndk\\21.1.6352462
+#Fri Sep 09 20:39:28 IST 2022
+sdk.dir=C\:\\Users\\New\\AppData\\Local\\Android\\Sdk
